--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     </head>
     
     <body>
-        <h1> The 800 Club </h1>
+        <div>
+            <h1> The 800 Club </h1>
+            <table>
+                <tr>
+                    <td>Our Plan </th>
+                    <td>|</td>
+                    <td>Student Mentors</th>
+                    <td>|</td>
+                    <td>Contact Us</th>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
